// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main render should render in evaluate mode 1`] = `
<div>
  <div
    data-testid="ui-layout"
  >
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Teacher Instructions
        </div>
      </div>
    </div>
    <div
      data-testid="preview-prompt"
    >
      Prompt
    </div>
    <div
      data-testid="correct-answer-toggle"
    />
    <div
      choices="[object Object]"
      classes="[object Object]"
      data-testid="constructed-response"
      feedback="[object Object]"
      markup="<p>The {{0}} jumped {{1}} the {{2}}</p>"
      mode="evaluate"
      prompt="Prompt"
      rationale="Rationale"
      teacherinstructions="Teacher Instructions"
      value="[object Object]"
    />
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Rationale
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Main render should render in gather mode 1`] = `
<div>
  <div
    data-testid="ui-layout"
  >
    <h2
      class="css-sxv43x"
    >
      Fill in the Blank Question
    </h2>
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Teacher Instructions
        </div>
      </div>
    </div>
    <div
      data-testid="preview-prompt"
    >
      Prompt
    </div>
    <div
      data-testid="correct-answer-toggle"
    />
    <div
      choices="[object Object]"
      classes="[object Object]"
      data-testid="constructed-response"
      feedback="[object Object]"
      markup="<p>The {{0}} jumped {{1}} the {{2}}</p>"
      mode="gather"
      prompt="Prompt"
      rationale="Rationale"
      teacherinstructions="Teacher Instructions"
      value="[object Object]"
    />
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Rationale
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Main render should render in view mode 1`] = `
<div>
  <div
    data-testid="ui-layout"
  >
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Teacher Instructions
        </div>
      </div>
    </div>
    <div
      data-testid="preview-prompt"
    >
      Prompt
    </div>
    <div
      data-testid="correct-answer-toggle"
    />
    <div
      choices="[object Object]"
      classes="[object Object]"
      data-testid="constructed-response"
      feedback="[object Object]"
      markup="<p>The {{0}} jumped {{1}} the {{2}}</p>"
      mode="view"
      prompt="Prompt"
      rationale="Rationale"
      teacherinstructions="Teacher Instructions"
      value="[object Object]"
    />
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Rationale
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Main render should render without prompt 1`] = `
<div>
  <div
    data-testid="ui-layout"
  >
    <h2
      class="css-sxv43x"
    >
      Fill in the Blank Question
    </h2>
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Teacher Instructions
        </div>
      </div>
    </div>
    <div
      data-testid="correct-answer-toggle"
    />
    <div
      choices="[object Object]"
      classes="[object Object]"
      data-testid="constructed-response"
      feedback="[object Object]"
      markup="<p>The {{0}} jumped {{1}} the {{2}}</p>"
      mode="gather"
      rationale="Rationale"
      teacherinstructions="Teacher Instructions"
      value="[object Object]"
    />
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Rationale
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Main render should render without rationale 1`] = `
<div>
  <div
    data-testid="ui-layout"
  >
    <h2
      class="css-sxv43x"
    >
      Fill in the Blank Question
    </h2>
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Teacher Instructions
        </div>
      </div>
    </div>
    <div
      data-testid="preview-prompt"
    >
      Prompt
    </div>
    <div
      data-testid="correct-answer-toggle"
    />
    <div
      choices="[object Object]"
      classes="[object Object]"
      data-testid="constructed-response"
      feedback="[object Object]"
      markup="<p>The {{0}} jumped {{1}} the {{2}}</p>"
      mode="gather"
      prompt="Prompt"
      teacherinstructions="Teacher Instructions"
      value="[object Object]"
    />
  </div>
</div>
`;

exports[`Main render should render without teacher instructions 1`] = `
<div>
  <div
    data-testid="ui-layout"
  >
    <h2
      class="css-sxv43x"
    >
      Fill in the Blank Question
    </h2>
    <div
      data-testid="preview-prompt"
    >
      Prompt
    </div>
    <div
      data-testid="correct-answer-toggle"
    />
    <div
      choices="[object Object]"
      classes="[object Object]"
      data-testid="constructed-response"
      feedback="[object Object]"
      markup="<p>The {{0}} jumped {{1}} the {{2}}</p>"
      mode="gather"
      prompt="Prompt"
      rationale="Rationale"
      value="[object Object]"
    />
    <div
      class="css-1qm1lh"
    >
      <div
        data-testid="collapsible"
      >
        <div
          data-testid="preview-prompt"
        >
          Rationale
        </div>
      </div>
    </div>
  </div>
</div>
`;
